# bisect-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md  test.example.sh  test.sh
src/: git.rs  github.rs  lib.rs  main.rs  sysroot.rs
test/: Dockerfile
