[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
name = "bisect-rust"
version = "0.1.0"

[dependencies]
clap = "2.24.1"
env_logger = "0.4.0"
error-chain = "0.9"
flate2 = "0.2"
git2 = "0.6"
log = "~0.3"
reqwest = "0.6"
serde = "1.0"
serde_json = "1.0"
tar = "0.4"
xz2 = "0.1.3"

[dependencies.chrono]
features = ["serde"]
version = "0.3.1"
