[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>", "The Rust Infrastructure Team"]
name = "rust_sysroot"
version = "0.1.0"

[dependencies]
clap = "2.25"
env_logger = "0.6.0"
error-chain = "0.11"
flate2 = "0.2"
git2 = "0.7"
log = "0.4"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
tar = "0.4"
xz2 = "0.1.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
